<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/rl_right"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@id/fl_context"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom" />

    <View
        android:id="@id/view_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:layout_below="@+id/fl_context"
        android:background="@color/gray_e8"/>

    <LinearLayout
        android:id="@id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_90"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white">

        <LinearLayout
            android:id="@id/ll_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homePageIcon"
                android:textColor="@color/blue_e2"
                android:textSize="@dimen/qb_px_40"
                android:visibility="gone" />

            <TextView
                android:id="@id/tv_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/qb_px_2"
                android:text="@string/homePage"
                android:textColor="@color/black_f3"
                android:textSize="@dimen/qb_px_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ll_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_find_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findPageIcon"
                android:textColor="@color/blue_e2"
                android:textSize="@dimen/qb_px_40"
                android:visibility="gone" />

            <TextView
                android:id="@id/tv_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/qb_px_2"
                android:text="@string/findPage"
                android:textColor="@color/black_f8"
                android:textSize="@dimen/qb_px_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ll_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_message_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messagePageIcon"
                android:textColor="@color/blue_e2"
                android:textSize="@dimen/qb_px_40"
                android:visibility="gone" />

            <TextView
                android:id="@id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/qb_px_2"
                android:text="@string/messagePage"
                android:textColor="@color/black_f8"
                android:textSize="@dimen/qb_px_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_mine_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minePageIcon"
                android:textColor="@color/blue_e2"
                android:textSize="@dimen/qb_px_40"
                android:visibility="gone" />

            <TextView
                android:id="@id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/qb_px_2"
                android:text="@string/minePage"
                android:textColor="@color/black_f8"
                android:textSize="@dimen/qb_px_24" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
